--- a/src/theme/components/menu.scss
+++ b/src/theme/components/menu.scss
@@ -5,7 +5,7 @@
  */
 .raptor-menu {
     z-index: 10000;
-    padding: 6px;
+    padding: $padding / 2;
 }
 
 .raptor-menu .ui-menu-item:before {
@@ -14,5 +14,5 @@
 
 .raptor-menu .ui-menu-item a,
 .raptor-menu .ui-menu-item a:hover {
-    padding: 3px 10px;
+    padding: ($padding / 4) ($padding / 2);
 }
