--- a/src/theme/components/path.scss
+++ b/src/theme/components/path.scss
@@ -4,6 +4,6 @@
  * @author David Neilsen <david@panmedia.co.nz>
  */
 .raptor-path {
-    padding: 5px;
+    padding: $padding / 4;
     font-size: $font-size;
 }
