--- a/src/theme/components/selectmenu.scss
+++ b/src/theme/components/selectmenu.scss
@@ -12,15 +12,14 @@
 
 .raptor-selectmenu-button {
     text-align: left;
-    padding: 3px 18px 5px 5px !important;
 
     // Pervent floated buttons breaking menu position
     float: none !important;
-    
+
     .ui-icon {
         position: absolute;
         right: 1px;
-        top: 8px;
+        top: $icon-size / 2;
     }
     .raptor-selectmenu-text {
         font-size: $font-size;
@@ -44,7 +43,7 @@
     left: 0;
     right: auto;
     display: none;
-    margin-top: -1px !important;
+    margin-top: -$border-radius !important;
 }
 
 .raptor-selectmenu-visible .raptor-selectmenu-menu {
@@ -53,7 +52,7 @@
 }
 
 .raptor-selectmenu-menu-item {
-    padding: 5px;
+    padding: $padding / 4;
     margin: 3px;
     z-index: 1;
     text-align: left;
@@ -64,11 +63,15 @@
     background-color: inherit;
 }
 
-.raptor-selectmenu-button {
-    background: #f5f5f5;
-    border: 1px solid #ccc;
+.raptor-buttonset .raptor-selectmenu-visible {
+    .raptor-selectmenu-button { @include border-bottom-radius(0); }
+    .raptor-menu { @include border-top-left-radius(0) }
 }
 
-.raptor-buttonset .raptor-selectmenu-visible .raptor-selectmenu-button {
-    @include border-bottom-radius(0);
+.raptor-menu-button {
+    height: 37 / no-unit($icon-size) * $padding;
+}
+
+.raptor-menu {
+    margin-top: -$border-width;
 }
