--- a/src/theme/layout.scss
+++ b/src/theme/layout.scss
@@ -14,9 +14,9 @@
 
 .raptor-wrapper {
     overflow: visible;
-    z-index: 1001;
+    z-index: 1000;
     position: fixed;
-    font-size: 12px;
+    font-size: $font-size;
     @include user-select(none);
 
     * {
@@ -24,8 +24,9 @@
     }
 
     .raptor-toolbar {
-        padding: 6px 0 0 5px;
         overflow: visible;
+        padding: ($padding / 2) 0 0 ($padding / 2);
+        z-index: 1300;
     }
 
     .ui-dialog-titlebar {
@@ -39,22 +40,20 @@
         min-height: 15px;
         display: inline-block;
     }
-}
-
-.raptor-dock-docked-to-element .raptor-toolbar {
-    padding: 5px 0 0 5px!important;
-
-    .raptor-group {
-        margin: 0 5px 5px 0;
+    .ui-widget-header {
+        @extend %state-title;
+        padding: $padding / 4
     }
 }
 
-.raptor-dock-docked-element {
+.raptor-dock-docked-to-element {
     display: block !important;
-    border: 0 none transparent;
     @include box-sizing(border-box);
 }
 
+.raptor-menu {
+    z-index: 1600;
+}
 
 /******************************************************************************\
  * Inputs
@@ -62,7 +61,7 @@
 .raptor-wrapper {
     textarea,
     input {
-        padding: 5px;
+        padding: $padding;
     }
 }
 
@@ -80,6 +79,11 @@
     }
 }
 
+
 html body div.ui-dialog div.ui-dialog-titlebar a.ui-dialog-titlebar-close span.ui-icon {
     margin-top: 0!important;
+}
+
+.raptor-click-button-to-edit-button {
+    z-index: 1500
 }
